<resources>
    <string name="app_name">Piensa Rápido</string>
    <string name="jugar">Jugar</string>
    <string name="f_cil">Fácil</string>
    <string name="intermedio">Intermedio</string>
    <string name="niveles_del">Niveles del</string>
    <string name="juego">juego</string>
    <string name="avanzado">Avanzado</string>
    <string name="experto">Experto</string>
    <string name="siguiente">Siguiente</string>
    <string name="textview">TextView</string>
    <string name="texto_largo_top_login">Ejercita tu mente con multiplicaciones, sumas, restas.</string>
    <string name="texto_registro">Al momento de registrarte podrás mantenerte al tanto de los cambios realizados</string>
    <string name="correo">Correo</string>
    <string name="a_n_no_te_has_registrado">Aún no te has registrado?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="cargando">Cargando..</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="noticias">Noticias</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="texto_card_view">Apoya a este pequeño juego llamado Piensa Rápido en una futura versión tendrá mejoras visuales.</string>
    <string name="texto_exclamacion">Toda las vistas fueron desarrolladas \npor el Ingeniero de Sistemas Paul Guillen.</string>
    <string name="soporte_desarollador">Soporte desarollador</string>
    <string name="texto_mantenimiento">Mantenimiento continuo de la aplicacióm móvil</string>
    <string name="texto_seguro_recomendar">Cuentale a tus amigos sobre el juego Piensa Rápido</string>
    <string name="texto_recomendar">Recomendar a un amigo</string>
    <string name="terminos">Terminos de servicio</string>
    <string name="politicas">Políticas de privacidad</string>
    <string name="piensa">Piensa</string>
    <string name="rapido">rápido</string>
    <string name="m_s">Más</string>
    <string name="version_control">v 0.1.0</string>
    <string name="piensa_r_pido">Piensa Rápido</string>
    <string name="empieza_tu_aventura">Empieza tu aventura</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="realizado_por_paul_guillen">Realizado por Paul Guillen</string>
    <string name="ya_posees_una_cuenta">Ya posees una cuenta?</string>
    <string name="salir">Salir</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correoprincipal_gmail_com">correoprincipal@gmail.com</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="fecha_de_creaci_n">Última vez jugado</string>
    <string name="_5_de_may_2022">5 de may 2022</string>
    <string name="contrase_a">Contraseña</string>
    <string name="text_incognita">\?</string>
    <string name="multi_example">1 x 2 =</string>
    <string name="number_seven">7</string>
    <string name="nivel">Nivel</string>
    <string name="text_contador">30s</string>
    <string name="text_division_puntaje">0/0</string>
    <string name="best">best</string>
    <string name="mejor_puntaje_personal">Mejor puntaje personal:</string>
    <string name="score">Score</string>
    <string name="puntaje">Puntaje:</string>
    <string name="suma_example">1 + 2 =</string>
    <string name="texto_mult">5 - 2 =</string>
    <string name="number_last_point">18</string>
    <string name="ultimo_puntaje">Ultimo puntaje</string>
    <string name="best_points">24</string>
    <string name="mejor_puntaje">Mejor puntaje :</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicaci_n">Multiplicación</string>
    <string name="titulo_noticia">Titulo noticia</string>
    <string name="descripcion_de_la_noticia">Descripcion de la noticia</string>
    <string name="fecha_de_la_noticia">Fecha de la noticia</string>
    <string name="noticias_nodata">En estos momentos no contamos con nuevas noticias que mostrar</string>
    <string name="resta_example">5 - 2 =</string>
    <string name="mul_example">5 x 2 =</string>
    <string name="ver_panel">Ver panel</string>
    <string name="ltimo_intento">Último intento</string>
    <string name="estad_stica">Estadística</string>
    <string name="datos">Datos:</string>
    <string name="ltima_vez_jugado">última vez jugado:</string>
    <string name="texto_largo_no_data">Lamentablemente aun no registras avances en esta operación.</string>
    <string name="total_de_preguntas">Total de preguntas :</string>
    <string name="total_de_incorrectas">Total de incorrectas :</string>
    <string name="total_de_correctas">Total de correctas :</string>
    <string name="total_jugado">Total jugado :</string>
    <string name="volver">Volver</string>
    <string name="tu_puntaje">Tu puntaje</string>
    <string name="fecha_de_la_cuenta_creada">Fecha de la cuenta creada</string>
    <string name="todos_los_puntajes_mayor_a_menor">Todos los puntajes (mayor a menor)</string>
    <string name="lo_sentimos">Lo sentimos :(</string>
    <string name="texto_no_data_own_data">Para visualizar los datos debes haber jugado la operación seleccionada.</string>
    <string name="ver_historial">Ver historial</string>
    <string name="pastel">Pastel</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="operaciones">Operaciones</string>
    <string name="historial">Historial</string>
    <string name="no_hay_historial_que_mostrar">No hay historial que mostrar</string>
    <string name="gr_fico_de_pastel"><![CDATA[Gráfico de Pastel ->]]></string>
</resources>