<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.detaildashboard.game.rest.GameOverRestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart"
            android:onClick="restart"
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ibExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit"
            android:onClick="exit"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/high_score"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntaje"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/score"
                android:textAlignment="center"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:textColor="@android:color/holo_green_light"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:text="@string/mejor_puntaje_personal"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/best"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/game_over"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/apellido" />

    </LinearLayout>

</LinearLayout>