<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.detaildashboard.NewsGameActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ActionBarStyle">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:text="@string/noticias"
                android:textColor="@color/light_green_primary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:text="@string/piensa_r_pido"
                android:textColor="@color/color_primary_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerview_view_all"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_news"
        android:layout_height="match_parent" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearlayout_nodata"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:background="@drawable/warning_person"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:textAlignment="center"
            android:fontFamily="@font/monserrat_alternates_medium"
            android:textSize="17sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/noticias_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</LinearLayout>