<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.start.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_exclamation"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/text_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monserrat_alternates_medium"
                            android:text="@string/texto_registro"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#DFDFDF" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/black"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/custom_editext_rounded"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <EditText
                        android:id="@+id/edt_lastname"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/custom_editext_rounded"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:hint="@string/apellido"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:textColorHint="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/custom_editext_rounded"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:textColorHint="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/custom_editext_rounded"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <EditText
                        android:id="@+id/edt_confirm_password"
                        android:textColorHint="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/custom_editext_rounded"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:hint="@string/confirmar_contrase_a"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textSize="16sp"
                        tools:ignore="Autofill,TextContrastCheck" />

                    <Button
                        android:id="@+id/btn_registrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:background="@color/light_green_primary"
                        android:fontFamily="@font/monserrat_alternates_medium"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="17sp"
                        android:text="@string/registrarme"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        tools:ignore="TextContrastCheck" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/imgb_back"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/ic_arrow"
                            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/monserrat_alternates_medium"
                            android:gravity="center_vertical"
                            android:text="@string/ya_posees_una_cuenta"
                            android:textColor="@color/black" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#424242"
                    android:fontFamily="@font/monserrat_alternates_medium"
                    android:padding="20dp"
                    android:text="@string/realizado_por_paul_guillen"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>