<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".activities.detaildashboard.game.mult.MultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/stopwatch"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/monserrat_alternates_medium"
                    android:text="@string/text_contador"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/star"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monserrat_alternates_medium"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="@string/text_division_puntaje"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:padding="20dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:gravity="center"
            android:fontFamily="@font/monserrat_alternates_medium"
            android:textColor="@color/black"
            android:text="@string/nivel"
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSum"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monserrat_alternates_medium"
                    android:text="@string/multi_example"
                    android:textSize="55sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_incognita"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="65sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="40dp"
                    app:backgroundTint="#0093D1"
                    android:onClick="chooseAnswer"
                    android:text="@string/number_seven"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="40dp"
                    android:layout_marginStart="5dp"
                    app:backgroundTint="#F2635F"
                    android:onClick="chooseAnswer"
                    android:text="@string/number_seven"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="40dp"
                    app:backgroundTint="#F4D00C"
                    android:onClick="chooseAnswer"
                    android:text="@string/number_seven"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="40dp"
                    android:layout_marginStart="5dp"
                    app:backgroundTint="#82E859"
                    android:layout_weight="1"
                    android:onClick="chooseAnswer"
                    android:text="@string/number_seven"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/loudspeaker"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text=""
                android:textSize="48sp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>